crates/runtime/tests/metadata/snapshots/integration__metadata__docs_alias_metadata.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: formatted
---
+---------------------------------------------------------------------------------------+
| loc                                                                                   |
+---------------------------------------------------------------------------------------+
| s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet |
| s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet |
| s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-02/data_0.parquet |
| s3://spiceai-public-datasets/test_documents_partitioned/day=2022-02-01/data_0.parquet |
| s3://spiceai-public-datasets/test_documents_partitioned/day=2022-02-01/data_0.parquet |
+---------------------------------------------------------------------------------------+
