crates/runtime/tests/metadata/snapshots/integration__metadata__docs_alias_metadata_schema.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: "format!(\"{schema}\")"
---
Field { "loc": nullable Utf8 }
