crates/runtime/tests/metadata/snapshots/integration__metadata__docs_count_with_location.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: formatted
---
+-----+
| cnt |
+-----+
| 2   |
+-----+
