crates/runtime/tests/metadata/snapshots/integration__metadata__docs_count_with_location_schema.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: "format!(\"{schema}\")"
---
Field { "cnt": Int64 }
