crates/runtime/tests/metadata/snapshots/integration__metadata__docs_distinct_location_schema.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: "format!(\"{schema}\")"
---
Field { "_location": nullable Utf8 }
