crates/runtime/tests/metadata/snapshots/integration__metadata__docs_distinct_partition_metadata.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: formatted
---
+------------+---------------------------------------------------------------------------------------+
| day        | location                                                                              |
+------------+---------------------------------------------------------------------------------------+
| 2022-01-01 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-01/data_0.parquet |
| 2022-01-02 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-01-02/data_0.parquet |
| 2022-02-01 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-02-01/data_0.parquet |
| 2022-03-10 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-03-10/data_0.parquet |
| 2022-03-15 | s3://spiceai-public-datasets/test_documents_partitioned/day=2022-03-15/data_0.parquet |
+------------+---------------------------------------------------------------------------------------+
