crates/runtime/tests/metadata/snapshots/integration__metadata__docs_distinct_partition_metadata_schema.snap
---
source: crates/runtime/tests/metadata/mod.rs
expression: "format!(\"{schema}\")"
---
Field { "day": Utf8 }, Field { "_location": nullable Utf8 }
